--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </a>
                 <div class="menu">
                     <ul>
-                        <li><a href="#">Collection</a></li>
+                        <li><a href="collection.html">Collection</a></li>
                         <li><a href="#">Article</a></li>
                         <li><a href="#">Ranking</a></li>
                         <li><a href="#">Minting</a></li>
