--- a/collection.html
+++ b/collection.html
@@ -135,8 +135,59 @@
             </div>
         </div>
     </section>
-    <section style="height: 3000px;">
-        <div class="left"></div>
+    <section class="collection-categories grid-width">
+        <div class="left">
+            <div class="categories-select">
+                <input type="checkbox" id="categories-toggle-option" class="categories-selected">
+                <label for="categories-toggle-option" class="categories-toggle-option flex">
+                    <p>Price low to high</p>
+                    <img src="image/toggle-icon-16x16.svg">
+                </label>
+                <div class="categories-option">
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                </div>
+            </div>
+            <div class="categories-select">
+                <input type="checkbox" id="categories-toggle-option" class="categories-selected">
+                <label for="categories-toggle-option" class="categories-toggle-option flex">
+                    <p>Price low to high</p>
+                    <img src="image/toggle-icon-16x16.svg">
+                </label>
+                <div class="categories-option">
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                    <div class="categories-option-value flex">
+                        <input type="checkbox" id="value-checkbox">
+                        <p>high to low</p>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="right"></div>
     </section>
 
