--- a/article.html
+++ b/article.html
@@ -41,122 +41,21 @@
                     <div class="mypage-icon">
                         <img src="image/mypage-icon.svg">
                     </div>
-                    
                 </div>
             </div>
         </div>
     </header>
-    <section class="main-content">
-        <div class="main-text grid-width">
-            <div class="main-title">
-                <div class="title flex">
-                    <h1>Macintosh Collection</h1>
-                    <img src="image/blueCheck-21x21.svg" style="margin-left: 8px; padding-bottom: 15px;">
-                </div>
-                <p>Macintosh Collection은 애플의 컴퓨터 제품인 Macintosh를<br>모티브로 한 디지털 예술의 혁신적인 새로운 차원을 제시합니다.</p>
-            </div>
-            
-            <div class="main-price flex">
-                <div class="items">
-                    <p>5,000 items</p>
-                </div>
-                <div class="eth flex">
-                    <img src="image/ETH-icon-20x20.svg">
-                    <p>0.025 ETH</p>
-                </div>
-            </div>
-            <div class="main-button">
-                <button class="button button-blue cursor"><a href="#">MINTING NOW</a></button>
-                <button class="button button-gray cursor"><a href="#">VIEW DROP</a></button>
-            </div>
+    <section class="article-main article-main-margin">
+        <div class="article-main-title">
+            <h1>Gemesis</h1>
+            <p>NFT 파워 유저들의 새벽을 예고합니다<br>
+                OpenSea Pro는 새로운 수준의 옵션을 제공합니다</p>
+            <button>VIEW MORE</button>
         </div>
     </section>
-    <section class="ranking grid-width">
-        <div class="view-more-flex">
-            <h1 class="section-title">Top NFT this Week</h1>
-            <a class="view-more" href="#">VIEW MORE</a>
-        </div>
-        <div class="wrapper">
-            <table>
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Collection</th>
-                        <th>Volume</th>
-                        <th>Change</th>
-                        <th>Floor Price</th>
-                        <th>Sales</th>
-                        <th>Unique Owneres</th>
-                        <th>Items Listed</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody class="cursor">
-                    <tr >
-                        <td class="rank">1</td>
-                        <td class="collection">
-                            <img class="nft-profile" src="image/profile/9.avif"><span style="margin-left: 20px;">Macintosh Collection</span>
-                        </td>
-                        <td class="volume">0.242 ETH</td>
-                        <td class="change change-red">+8%</td>
-                        <td class="floor-price">0.05 ETH</td>
-                        <td class="sales">0.05 ETH</td>
-                        <td class="unique-owneres">56%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">2,706 owners</span></td>
-                        <td class="items-listed">4%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">213 of 4,797</span></td>
-                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
-                    </tr>
-                    <tr>
-                        <td class="rank">2</td>
-                        <td class="collection"><img class="nft-profile" src="image/profile/4.avif" style="width: 64px;"><span style="margin-left: 20px;">Bored Ape Yacht Club</span></td>
-                        <td class="volume">55 ETH</td>
-                        <td class="change">-</td>
-                        <td class="floor-price">53.99 ETH</td>
-                        <td class="sales">10</td>
-                        <td class="unique-owneres">58%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">11,232 owners</span></td>
-                        <td class="items-listed">3%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">264 of 9,998</span></td>
-                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
-                    </tr>
-                    <tr>
-                        <td class="rank">3</td>
-                        <td class="collection"><img class="nft-profile" src="image/profile/6.avif" style="width: 64px;"><span style="margin-left: 20px;">Wrapped Cryptopunks</span></td>
-                        <td class="volume">53 ETH</td>
-                        <td class="change">-</td>
-                        <td class="floor-price">74.83 ETH</td>
-                        <td class="sales">1</td>
-                        <td class="unique-owneres">17%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">136 owners</span></td>
-                        <td class="items-listed">0.13%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">1 of 783</span></td>
-                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
-                    </tr>
-                    <tr>
-                        <td class="rank">4</td>
-                        <td class="collection"><img class="nft-profile" src="image/profile/7.avif" style="width: 64px;"><span style="margin-left: 20px;">Milady Maker</span></td>
-                        <td class="volume">12.3 ETH</td>
-                        <td class="change change-blue">-16%</td>
-                        <td class="floor-price">1.78 ETH</td>
-                        <td class="sales">7</td>
-                        <td class="unique-owneres">33%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">3,281 owners</span></td>
-                        <td class="items-listed">3%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">306 of 9,824</span></td>
-                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
-                    </tr>
-                    <tr>
-                        <td class="rank">5</td>
-                        <td class="collection"><img class="nft-profile" src="image/profile/8.avif" style="width: 64px;"><span style="margin-left: 20px;">Outlaws</span></td>
-                        <td class="volume">11.1 ETH</td>
-                        <td class="change change-red">+78%</td>
-                        <td class="floor-price">0.11 ETH</td>
-                        <td class="sales">89</td>
-                        <td class="unique-owneres">31%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">3,062 owners</span></td>
-                        <td class="items-listed">10%<br><span style="font-size: 14px; font-weight: bold; color: #909090;">1,038 of 10,001</span></td>
-                        <td class="bookmark"><img src="image/star-21x21.svg" style="margin-right: 10px;"></td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-    </section>
-    <section class="article grid-width">
+    <section class="article grid-width article-margin">
         <div class="view-more-flex">
             <h1 class="section-title">Top Article this Week</h1>
-            <a class="view-more" href="#">VIEW MORE</a>
         </div>
         <div class="article-container flex">
             <div class="article-box">
@@ -201,7 +100,107 @@
             </div>
         </div>
     </section>
-
+    <section class="article grid-width">
+        <div class="view-more-flex">
+            <h1 class="section-title">Most View Article</h1>
+        </div>
+        <div class="article-container flex">
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/1.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Nakamigos</h1>
+                    <p>블록체인의 2만 명의 고유 암호 투자자들과 상업적 권리를 가진 암호 투자자들이 큐 암호 투자자들...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/2.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">BEANZ Official</h1>
+                    <p>빈즈는 정원의 흙에서 싹을 틔우는 작은 종입니다. 그들은 아즈키의 훌륭한 조수가 됩니다...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/3.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Bored Ape Yacht Club</h1>
+                    <p>Borreed Ape Yattle Club은 Borreed Ape NFT 10,000개의 독특한 디지털 수집품을 모아놓은 곳입니다...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/4.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Private Jet Pyjama Party</h1>
+                    <p>여행에 대한 경험과 공유된 열정을 통해 글로벌 커뮤니티를 하나로 묶는 디지털 멤버십 클럽...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+        </div>
+    </section>
+    <section class="article-content">
+        <div class="article-main-title content-title">
+            <h1>Crowd</h1>
+            <p>"Crowd"는 무한 공급 세대 예술 수집기이다.<br>
+                모든 색깔의 생물체를 작곡하는 생물체</p>
+            <button>VIEW MORE</button>
+    </section>
+    <section class="article grid-width">
+        <div class="view-more-flex">
+            <h1 class="section-title">Most View Article</h1>
+        </div>
+        <div class="article-container flex">
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/1.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Nakamigos</h1>
+                    <p>블록체인의 2만 명의 고유 암호 투자자들과 상업적 권리를 가진 암호 투자자들이 큐 암호 투자자들...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/2.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">BEANZ Official</h1>
+                    <p>빈즈는 정원의 흙에서 싹을 틔우는 작은 종입니다. 그들은 아즈키의 훌륭한 조수가 됩니다...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/3.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Bored Ape Yacht Club</h1>
+                    <p>Borreed Ape Yattle Club은 Borreed Ape NFT 10,000개의 독특한 디지털 수집품을 모아놓은 곳입니다...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+            <div class="article-box">
+                <a href="#">
+                    <img src="image/article/4.png">
+                </a>
+                <div class="article-text">
+                    <h1 class="section-title">Private Jet Pyjama Party</h1>
+                    <p>여행에 대한 경험과 공유된 열정을 통해 글로벌 커뮤니티를 하나로 묶는 디지털 멤버십 클럽...</p>
+                </div>
+                <button class="article-button">READ MORE</button>
+            </div>
+        </div>
+    </section>
     <section class="partnership">
         <h1 class="section-title">세계 최고의 NFT 크리에이터 및 브랜드가 의존합니다<br>
             새로운 관객들에게 다가가기 위해 바다를 열어줍니다</h1>
