--- a/article.html
+++ b/article.html
@@ -107,7 +107,7 @@
         <div class="article-container flex">
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/5.png">
+                    <img src="image/article/5.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Nakamigos</h1>
@@ -117,7 +117,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/6.png">
+                    <img src="image/article/6.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">BEANZ Official</h1>
@@ -127,7 +127,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/7.png">
+                    <img src="image/article/7.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Bored Ape Yacht Club</h1>
@@ -137,7 +137,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/8.png">
+                    <img src="image/article/8.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Private Jet Pyjama Party</h1>
@@ -161,7 +161,7 @@
         <div class="article-container flex">
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/9.png">
+                    <img src="image/article/9.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Nakamigos</h1>
@@ -171,7 +171,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/10.png">
+                    <img src="image/article/10.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">BEANZ Official</h1>
@@ -181,7 +181,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/11.png">
+                    <img src="image/article/11.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Bored Ape Yacht Club</h1>
@@ -191,7 +191,7 @@
             </div>
             <div class="article-box">
                 <a href="#">
-                    <img src="image/article/12.png">
+                    <img src="image/article/12.PNG">
                 </a>
                 <div class="article-text">
                     <h1 class="section-title">Private Jet Pyjama Party</h1>
