--- a/article.html
+++ b/article.html
@@ -21,7 +21,7 @@
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
                         <li><a href="minting.html">Minting</a></li>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="help.html">Help</a></li>
                     </ul>
                 </div>
             </div>
@@ -100,6 +100,7 @@
             </div>
         </div>
     </section>
+
     <section class="article grid-width">
         <div class="view-more-flex">
             <h1 class="section-title">Most View Article</h1>
@@ -110,8 +111,8 @@
                     <img src="image/article/5.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Nakamigos</h1>
-                    <p>블록체인의 2만 명의 고유 암호 투자자들과 상업적 권리를 가진 암호 투자자들이 큐 암호 투자자들...</p>
+                    <h1 class="section-title">The Poser Party</h1>
+                    <p>무엇이 진짜이고 무엇이 가짜입니까? 람보에서 식료품을 파는 부자 형제, 인스타베이스 포토샵...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -120,8 +121,8 @@
                     <img src="image/article/6.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">BEANZ Official</h1>
-                    <p>빈즈는 정원의 흙에서 싹을 틔우는 작은 종입니다. 그들은 아즈키의 훌륭한 조수가 됩니다...</p>
+                    <h1 class="section-title">Sunflower Land Collectibles</h1>
+                    <p>플레이어들은 이국적이고 희귀한 자원을 찾기 위해 농작물을 심고, 나무를 자르고, 바위를 채굴해야 합니다. 가장 좋은 부분: 모든 자원은...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -130,8 +131,8 @@
                     <img src="image/article/7.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Bored Ape Yacht Club</h1>
-                    <p>Borreed Ape Yattle Club은 Borreed Ape NFT 10,000개의 독특한 디지털 수집품을 모아놓은 곳입니다...</p>
+                    <h1 class="section-title">CLONE X - X TAKASHI</h1>
+                    <p>RTFKT와 무라카미 다카시의 차세대 아바타 2만 명</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -140,8 +141,8 @@
                     <img src="image/article/8.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Private Jet Pyjama Party</h1>
-                    <p>여행에 대한 경험과 공유된 열정을 통해 글로벌 커뮤니티를 하나로 묶는 디지털 멤버십 클럽...</p>
+                    <h1 class="section-title">Saved Souls</h1>
+                    <p>크립토 세계를 살고 숨쉬는 사람들을 위한 궁극의 NFT 프로젝트. Saved Soul의 디지털 표현을 확인할 수 있습니다...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -154,6 +155,7 @@
                 모든 색깔의 생물체를 작곡하는 생물체</p>
             <button>VIEW MORE</button>
     </section>
+
     <section class="article grid-width">
         <div class="view-more-flex">
             <h1 class="section-title">Most View Article</h1>
@@ -164,8 +166,8 @@
                     <img src="image/article/9.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Nakamigos</h1>
-                    <p>블록체인의 2만 명의 고유 암호 투자자들과 상업적 권리를 가진 암호 투자자들이 큐 암호 투자자들...</p>
+                    <h1 class="section-title">Otherside Vessels</h1>
+                    <p>다른 쪽의 혈관 컬렉션에 있는 각 혈관에는 그늘이 있습니다. 그늘이 있으면 그림자가 부화하여 마라가 됩니다...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -174,8 +176,8 @@
                     <img src="image/article/10.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">BEANZ Official</h1>
-                    <p>빈즈는 정원의 흙에서 싹을 틔우는 작은 종입니다. 그들은 아즈키의 훌륭한 조수가 됩니다...</p>
+                    <h1 class="section-title">The Weirdo Ghost Gang</h1>
+                    <p>"우리는 유령, 당신의 악몽, 당신의 백일몽입니다."</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -184,8 +186,8 @@
                     <img src="image/article/11.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Bored Ape Yacht Club</h1>
-                    <p>Borreed Ape Yattle Club은 Borreed Ape NFT 10,000개의 독특한 디지털 수집품을 모아놓은 곳입니다...</p>
+                    <h1 class="section-title">Treeverse Plots</h1>
+                    <p>B트리버스에 오신 걸 환영합니다 트리버스는 MOBA 스타일의 전투 시스템을 갖춘 오픈 월드 판타지 MMORPG입니다...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
@@ -194,8 +196,8 @@
                     <img src="image/article/12.PNG">
                 </a>
                 <div class="article-text">
-                    <h1 class="section-title">Private Jet Pyjama Party</h1>
-                    <p>여행에 대한 경험과 공유된 열정을 통해 글로벌 커뮤니티를 하나로 묶는 디지털 멤버십 클럽...</p>
+                    <h1 class="section-title">YuliMysteryBox</h1>
+                    <p>Yuliverse는 포켓몬 고에서 영감을 받아 BSC 체인의 세계 최초 병렬 현실 게임 메타버스입니다...</p>
                 </div>
                 <button class="article-button">READ MORE</button>
             </div>
