--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
                         <li><a href="minting.html">Minting</a></li>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="help.html">Help</a></li>
                     </ul>
                 </div>
             </div>
@@ -66,15 +66,15 @@
                 </div>
             </div>
             <div class="main-button">
-                <button class="button button-blue cursor"><a href="#">MINTING NOW</a></button>
-                <button class="button button-gray cursor"><a href="#">VIEW DROP</a></button>
+                <button class="button button-blue cursor"><a href="article.html">MINTING NOW</a></button>
+                <button class="button button-gray cursor"><a href="article.html">VIEW DROP</a></button>
             </div>
         </div>
     </section>
     <section class="ranking grid-width">
         <div class="view-more-flex">
             <h1 class="section-title">Top NFT this Week</h1>
-            <a class="view-more" href="#">VIEW MORE</a>
+            <a class="view-more" href="ranking.html">VIEW MORE</a>
         </div>
         <div class="wrapper">
             <table>
@@ -156,11 +156,11 @@
     <section class="article grid-width">
         <div class="view-more-flex">
             <h1 class="section-title">Top Article this Week</h1>
-            <a class="view-more" href="#">VIEW MORE</a>
+            <a class="view-more" href="article.html">VIEW MORE</a>
         </div>
         <div class="article-container flex">
             <div class="article-box">
-                <a href="#">
+                <a href="article.html">
                     <img src="image/article/1.png">
                 </a>
                 <div class="article-text">
@@ -170,7 +170,7 @@
                 <button class="article-button">READ MORE</button>
             </div>
             <div class="article-box">
-                <a href="#">
+                <a href="article.html">
                     <img src="image/article/2.png">
                 </a>
                 <div class="article-text">
@@ -180,7 +180,7 @@
                 <button class="article-button">READ MORE</button>
             </div>
             <div class="article-box">
-                <a href="#">
+                <a href="article.html">
                     <img src="image/article/3.png">
                 </a>
                 <div class="article-text">
@@ -190,7 +190,7 @@
                 <button class="article-button">READ MORE</button>
             </div>
             <div class="article-box">
-                <a href="#">
+                <a href="article.html">
                     <img src="image/article/4.png">
                 </a>
                 <div class="article-text">
