--- a/minting.html
+++ b/minting.html
@@ -21,7 +21,7 @@
                         <li><a href="article.html">Article</a></li>
                         <li><a href="ranking.html">Ranking</a></li>
                         <li><a href="minting.html">Minting</a></li>
-                        <li><a href="#">Help</a></li>
+                        <li><a href="help.html">Help</a></li>
                     </ul>
                 </div>
             </div>
@@ -166,107 +166,97 @@
         <div class="morefrom-container grid-width">
             <h1 class="section-title morefrom-title">More from @JeukJeon</h1>
             <div class="nft-line flex">
-                <div class="nft-box">
-                    <a href="#">
-                        <div style="width: 291px; height: 291px; overflow: hidden;">
-                            <img src="image/collection-photo/1.png"">
-                        </div>
+                <div class="nft-box moreform-nft-box">
+                    <a href="minting.html">
+                        <img src="image/collection-photo/53.png" alt="">
                     </a>
                     <div class="eth-box">
-                        <p>0.023</p>
+                        <p>0.71</p>
                         <img src="image/ETH-icon-20x20.svg" alt="">
                     </div>
                     <div class="collection-nft-profile">
                         <div class="nft-price-main">
-                            <h1>Energy ipad</h1>
-                            <p>#321</p>
+                            <h1>Energy MacBook Pro</h1>
+                            <p>#53</p>
                         </div>
                         <div class="nft-price-sub">
-                            <p>Last sale :  0.0002 ETH</p>
+                            <p>Last sale :  0.02 ETH</p>
                         </div>
                     </div>
                     <button class="nft-button">Add to cart</button>
                 </div>
                 <div class="nft-box">
-                    <a href="#">
-                        <div style="width: 291px; height: 291px; overflow: hidden;">
-                            <img src="image/collection-photo/2.png"">
-                        </div>
+                    <a href="minting.html">
+                        <img src="image/collection-photo/54.png" alt="">
                     </a>
                     <div class="eth-box">
-                        <p>0.023</p>
+                        <p>0.77</p>
                         <img src="image/ETH-icon-20x20.svg" alt="">
                     </div>
                     <div class="collection-nft-profile">
                         <div class="nft-price-main">
-                            <h1>Energy ipad</h1>
-                            <p>#321</p>
+                            <h1>Evil Macintosh</h1>
+                            <p>#54</p>
                         </div>
                         <div class="nft-price-sub">
-                            <p>Last sale :  0.0002 ETH</p>
+                            <p>Last sale :  0.02 ETH</p>
                         </div>
                     </div>
                     <button class="nft-button">Add to cart</button>
                 </div>
                 <div class="nft-box">
-                    <a href="#">
-                        <div style="width: 291px; height: 291px; overflow: hidden;">
-                            <img src="image/collection-photo/3.png"">
-                        </div>
+                    <a href="minting.html">
+                        <img src="image/collection-photo/55.png" alt="">
                     </a>
                     <div class="eth-box">
-                        <p>0.023</p>
+                        <p>0.95</p>
                         <img src="image/ETH-icon-20x20.svg" alt="">
                     </div>
                     <div class="collection-nft-profile">
                         <div class="nft-price-main">
-                            <h1>Energy ipad</h1>
-                            <p>#321</p>
+                            <h1>Fuwa Macintosh II</h1>
+                            <p>#55</p>
                         </div>
                         <div class="nft-price-sub">
-                            <p>Last sale :  0.0002 ETH</p>
+                            <p>Last sale :  0.02 ETH</p>
                         </div>
                     </div>
                     <button class="nft-button">Add to cart</button>
                 </div>
                 <div class="nft-box">
-                    <a href="#">
-                        <div style="width: 291px; height: 291px; overflow: hidden;">
-                            <img src="image/collection-photo/4.png"">
-                        </div>
+                    <a href="minting.html">
+                        <img src="image/collection-photo/56.png" alt="">
                     </a>
                     <div class="eth-box">
-                        <p>0.023</p>
+                        <p>0.63</p>
                         <img src="image/ETH-icon-20x20.svg" alt="">
                     </div>
                     <div class="collection-nft-profile">
                         <div class="nft-price-main">
-                            <h1>Energy ipad</h1>
-                            <p>#321</p>
+                            <h1>Instability iMac</h1>
+                            <p>#56  </p>
                         </div>
                         <div class="nft-price-sub">
-                            <p>Last sale :  0.0002 ETH</p>
+                            <p>Last sale :  0.02 ETH</p>
                         </div>
                     </div>
                     <button class="nft-button">Add to cart</button>
                 </div>
                 <div class="nft-box">
-                    <a href="#">
-                        <div style="width: 291px; height: 291px; overflow: hidden;">
-                            <img src="image/collection-photo/5.png"">
-                        </div>
+                    <a href="minting.html">
+                        <img src="image/collection-photo/52.png" alt="">
                     </a>
                     <div class="eth-box">
-                        <p>0.023</p>
+                        <p>1.41</p>
                         <img src="image/ETH-icon-20x20.svg" alt="">
                     </div>
                     <div class="collection-nft-profile">
                         <div class="nft-price-main">
-                            <h1>Energy ipad</h1>
-                            <p>#321</p>
+                            <h1>Confidence iPad Pro</h1>
+                            <p>#52</p>
                         </div>
                         <div class="nft-price-sub">
-                            <p>Last sale :  0.0002 ETH</p>
+                            <p>Last sale :  0.02 ETH</p>
                         </div>
                     </div>
                     <button class="nft-button">Add to cart</button>
