--- a/article.html
+++ b/article.html
@@ -149,7 +149,7 @@
         </div>
     </section>
     <section class="article-content">
-        <div class="article-main-title content-title">
+        <div class="article-main-title content-title grid-width">
             <h1>Crowd</h1>
             <p>"Crowd"는 무한 공급 세대 예술 수집기이다.<br>
                 모든 색깔의 생물체를 작곡하는 생물체</p>
